crates/s3ers-api/tests/ui/07-error-type-attribute.stderr
error: unexpected token
  --> $DIR/07-error-type-attribute.rs:16:5
   |
16 |     #[derive(Default)]
   |     ^
